--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,11 @@
 version: "3.2"
 services:
   jenkins:
+    user: root
     image: jenkinsci/blueocean
     ports:
       - "8080:8080"
       - "50000:50000"
-    #volumes:
-    #   - "/var/run/docker.sock:/var/run/docker.sock"
+    volumes:
+      #- jenkins-data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
